changed structure to receive queries
SQL reading in function added
