# controllers/Project.js
@@ -3,13 +3,23 @@
 var utils = require('../utils/writer.js');
 var Project = require('../service/ProjectService');
 
-module.exports.createProject = function createProject (req, res, next) {
-  Project.createProject()
+module.exports.postProject = function (req, res, next) {
+  var body=req.swagger.params['body'].value;
+  var TutorID=body.TutorID;
+  var ProjectName=body.ProjectName;
+  var ProjectCategory=body.ProjectCategory;
+  var ProjectYear=body.ProjectYear;
+  var StartDate=body.StartDate;
+  var EndDate=body.EndDate;
+  var GroupName=body.GroupName;
+  var Notes=body.Notes;
+
+  Project.postProject(TutorID,ProjectName,ProjectCategory,ProjectYear,StartDate,EndDate,GroupName,Notes)
     .then(function (response) {
       utils.writeJson(res, response);
     })
     .catch(function (response) {
-      utils.writeJson(res, response);
+      utils.writeJson(res, utils.respondWithCode(response.statusCode,response));
     });
 };
 
@@ -37,7 +47,7 @@ module.exports.editProject = function editProject (req, res, next) {
 
 module.exports.getProject = function getProject (req, res, next) {
   var projectID = req.swagger.params['ProjectID'].value;
-  Project.getProject(projectID)
+  var response = Project.getProject(projectID)
     .then(function (response) {
       utils.writeJson(res, response);
     })
@@ -47,11 +57,5 @@ module.exports.getProject = function getProject (req, res, next) {
 };
 
 module.exports.getProjects = function getProjects (req, res, next) {
-  Project.getProjects()
-    .then(function (response) {
-      utils.writeJson(res, response);
-    })
-    .catch(function (response) {
-      utils.writeJson(res, response);
-    });
+  Project.getProjects(req.swagger.params, res, next);
 };
